...
    var body: some View {
        ZStack{
                GeometryReader{ geometry in
                    ScrollView(.vertical, showsIndicators: false){
                        VStack(spacing: 10){
                            if(appState.isUserLoggedIn && viewModel.trackingLoading){
                                Text("Your last added products").font(.system(size: 20).bold()).multilineTextAlignment(.leading).foregroundColor(Color("PrimaryLabel")).frame(maxWidth: .infinity, alignment: .leading).padding(.leading).padding(.bottom, 5).accessibilityIdentifier("HomeViewLastProductText")
                                    LoadingIndicator(animation: .threeBallsBouncing, color: Color("Primary"), size: .medium, speed: .normal)
                                
                            }
                            if(appState.isUserLoggedIn && viewModel.trackingObjects.count > 0){
                                Text("Your last added products").font(.system(size: 20).bold()).multilineTextAlignment(.leading).foregroundColor(Color("PrimaryLabel")).frame(maxWidth: .infinity, alignment: .leading).padding(.leading).padding(.bottom, 5).accessibilityIdentifier("HomeViewLastProductText")
                               
...
                                            }.highPriorityGesture(DragGesture())
                                    }
                                }.frame(width: geometry.size.width, height: 150).accessibilityIdentifier("HomeViewPagingView")
                                Divider()
                            }
                            HStack{
                                Text("Most tracked").font(Font.system(size: 20).bold()).foregroundColor(Color("PrimaryLabel")).accessibilityIdentifier("HomeViewMostTrackedText")
                                Spacer()
                                NavigationLink {
                                    SeeAllView(apiUrl: AppConstant.getMostTrackedPaging + "?limit=20&page=0", viewTitle: NSLocalizedString("Most tracked", comment: "Most tracked"))
                                } label: {
                                    Text("See All")
                                }.accessibilityIdentifier("HomeViewSeeAllButton")
...
