...
                        } label: {
                            HStack{
                                Image(systemName: "plus")
                                Text("Add product")
                            }.font(.body.bold())
                        }.frame(maxWidth: .infinity).padding(.horizontal).padding(.vertical, 5).background(Color("Primary")).foregroundColor(Color.white).cornerRadius(10).padding()
                            .accessibilityIdentifier("iPadMainViewAddProduct")
                    }
                
                }.navigationTitle("Menu")
                }
        }
        .sheet(isPresented: $viewModel.showAddProduct, content: {
...
