...
                    .padding(12)
                    .background(Color("Primary"))
                    .foregroundColor(.white)
                    .cornerRadius(10)
                    .shadow(radius: 2)
                    .offset(y: -20)
                    .accessibilityIdentifier("AmazonTabBar")
                    
                Spacer()
                Button{
                    selectedTab = elements[2].tag
                } label: {
                    VStack{
...
